add home-page image and fav-icon

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Poker - EVO bootcamp 2022</title>
+    <title>Holdem Poker</title>
   </head>
 
   <body>
