--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Holdem Poker</title>
+    <title>Texas Hold 'em</title>
   </head>
   <body>
     <div id="root"></div>
