test favicon issue

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Texas Hold 'em</title>
+    <link rel="icon" href="favicon.ico" />
   </head>
   <body>
     <div id="root"></div>
